# Chess_SO_project

./: CMakeLists.txt  Makefile  README.md  checkmate_engine.c  checkmate_engine.h  chess  main.c  menu.c  menu.h  move_validation.c  move_validation.h
